# djangoProject

./: pyproject.toml
posts/: admin.py  email.py  forms.py  history_service.py  logfilemiddleware.py  models.py  views.py
posts/api/: permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_note_mod_time.py
project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: info.css
templates/: create_form.html  home.html  info.html  menu.html  note.html  posts-lists.html  profile.html  redact-note.html  user_posts_list.html  welcome.html
templates/registration/: login.html  register.html  reset-form.html  reset-password-confirm.html  reset-password-form.html
