[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Roman_Sku <romanskuratovich08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-ckeditor = "^6.7.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
djoser = "^2.2.2"
crispy-bootstrap5 = "^2023.10"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
